<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="-2.0dip"
    android:background="@drawable/background_help1" >

    <Button
        android:id="@+id/imgbt_help_back"
        android:layout_width="75.0dip"
        android:layout_height="55.0dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/buttonss"
        android:clickable="false"
        android:text="@string/back"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_help_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:text="@string/help_content" />

    <TextView
        android:id="@+id/textView_help_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/help_tile"
        android:textColor="@color/white"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/textView_help_probleam"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/help"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="22dp"
        android:layout_alignLeft="@+id/textView_help_content"
        android:layout_below="@+id/textView_help_probleam"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/help_prom"
        android:textColor="#ffff0000"
        android:textSize="16dp" />

</RelativeLayout>