<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="-2.0dip"
    android:background="@drawable/background_main1" >

    <Button
        android:id="@+id/imgbt_navi"
        android:layout_width="134.0dip"
        android:layout_height="126.0dip"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34.0dip"
        android:background="@drawable/buttonnavigation1" />

    <Button
        android:id="@+id/imgbt_mode"
        android:layout_width="134.0dip"
        android:layout_height="126.0dip"
        android:layout_alignBaseline="@+id/imgbt_navi"
        android:layout_alignTop="@+id/imgbt_navi"
        android:layout_marginRight="20.0dip"
        android:layout_toLeftOf="@+id/imgbt_navi"
        android:background="@drawable/buttonmode1" />

    <Button
        android:id="@+id/imgbt_help"
        android:layout_width="134.0dip"
        android:layout_height="126.0dip"
        android:layout_alignBaseline="@+id/imgbt_navi"
        android:layout_alignTop="@+id/imgbt_navi"
        android:layout_marginLeft="28.0dip"
        android:layout_toRightOf="@+id/imgbt_navi"
        android:background="@drawable/buttonhelp1" />

    <Button
        android:id="@+id/imgbt_start"
        android:layout_width="275.0dip"
        android:layout_height="100.0dip"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15.0dip"
        android:background="@drawable/buttonstart1"
        android:text="@string/start"
        android:textSize="35.0dip"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="130.0dip"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imgbt_mode"
        android:layout_below="@+id/imgbt_mode"
        android:layout_marginTop="-10.0dip"
        android:gravity="center_horizontal"
        android:text="@string/mode"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#ffffffff" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:gravity="center_horizontal"
        android:text="@string/navi"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#ffffffff" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="130.0dip"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignRight="@+id/imgbt_help"
        android:gravity="center_horizontal"
        android:text="@string/help_tile"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#ffffffff" />

</RelativeLayout>